# Backend-Spring

./: README.md
EcommerceSpring/: build.gradle
EcommerceSpring/src/main/java/com/example/EcommerceSpring/: EcommerceSpringApplication.java
EcommerceSpring/src/main/java/com/example/EcommerceSpring/controllers/: CateoryController.java
Gradle/demo/src/main/resources/: application.yml
SAMPLEBAZELPROJECT/bazel-out/: stable-status.txt  volatile-status.txt
SAMPLEBAZELPROJECT/bazel-samplebazelproject/: MODULE.bazel  WORKSPACE
SAMPLEBAZELPROJECT/bazel-samplebazelproject/app/: BUILD
SAMPLEBAZELPROJECT/bazel-samplebazelproject/app/com/example/main/: Main.java
SAMPLEBAZELPROJECT/utils/: BUILD
SAMPLEBAZELPROJECT/utils/com/example/lib/: Greeting.java
rate-limiter/: build.gradle
rate-limiter/src/main/java/com/example/config/: RateLimiterProperties.java
rate-limiter/src/main/resources/: application.properties
